--- a/checkout/templates/checkout/checkout_complete.html
+++ b/checkout/templates/checkout/checkout_complete.html
@@ -58,7 +58,8 @@
                             </p>
                         </div>
                         <div class="col-12 col-md-3 text-md-right mt-3">
-                            <p><strong><i class="fas fa-ticket-alt" aria-hidden="true"></i> Tickets Purchased : </strong></p>
+                            <p><strong><i class="fas fa-ticket-alt" aria-hidden="true"></i> Tickets Purchased :
+                                </strong></p>
                             <p class="small mb-0">
                                 {{ item.adult_quantity }} adults @ <i class="fas fa-euro-sign" aria-hidden="true"></i>
                                 <span class="sr-only">euro</span>
@@ -85,7 +86,7 @@
                             </p>
                             <p class="small mb-0">
                                 <i class="fas fa-euro-sign" aria-hidden="true"></i>
-                                <span class="sr-only">euro</span> 
+                                <span class="sr-only">euro</span>
                                 {{ item.ticketitem_total }}
                             </p>
                         </div>
@@ -200,7 +201,7 @@
                             <p class="mb-0">
                                 <strong>
                                     <i class="fas fa-euro-sign" aria-hidden="true"></i>
-                                     Order Total:
+                                    Order Total:
                                 </strong>
                             </p>
                         </div>
@@ -208,7 +209,7 @@
                             <p class="mb-0">
                                 <i class="fas fa-euro-sign" aria-hidden="true"></i>
                                 <span class="sr-only">euro</span>
-                                 {{ order.order_total }}
+                                {{ order.order_total }}
                             </p>
                         </div>
                     </div>
@@ -234,7 +235,6 @@
                     <span class="text-uppercase">Discover more Trips</span>
                 </a>
                 {% endif %}
-                </div>
             </div>
         </div>
     </div>
