--- a/checkout/templates/checkout/checkout_complete.html
+++ b/checkout/templates/checkout/checkout_complete.html
@@ -221,7 +221,7 @@
             <div class="col-12 col-lg-7 text-right">
                 {% if from_profile %}
                 <!--User is viewing past order history-->
-                <a href="{% url 'profile' %}" class="btn btn-dropdown">
+                <a href="{% url 'profile' %}" class="btn btn-next">
                     <span class="icon mr-2">
                         <i class="fas fa-angle-left" aria-hidden="true" ></i>
                     </span>
