--- a/accounts/templates/accounts/favourites.html
+++ b/accounts/templates/accounts/favourites.html
@@ -44,25 +44,36 @@
                         <div class="row">
                             <div class="col">
                                 <p>
-                                    <i class="fas fa-hourglass-end d-block"></i>{{ trip.duration }}hrs
+                                   <i class="fas fa-hourglass-end d-block" aria-hidden="true"></i>
+                                   <span class="sr-only">duration of the trip</span>
+                                   {{ trip.duration }}hrs
                                 </p>
                             </div>
                             <div class="col">
-                                <p><i class="fas fa-euro-sign d-block"></i>{{ trip.adult_price }}</p>
+                                <p><i class="fas fa-euro-sign d-block" aria-hidden="true"></i>
+                                    <span class="sr-only">euro</span>
+                                    {{ trip.adult_price }}
+                                </p>
                             </div>
                             <div class="col">
-                                <p><i class="fas fa-star d-block"></i> {{ trip.averageRating }}/5 </p>
+                                <p><i class="fas fa-star d-block" aria-hidden="true"></i>
+                                    <span class="sr-only">star rating</span>
+                                    {{ trip.averageRating }}/5 
+                                </p>
                             </div>
                             <div class="col">
                                 {% if trip.family_friendly %}
-                                <p><i class="fas fa-child d-block"></i>Family</p>
+                                <p>
+                                    <i class="fas fa-child d-block" aria-hidden="true"></i>
+                                    Family Friendly
+                                </p>
                                 {% endif %}
                             </div>
                         </div>
                         <div class="row mt-4">
                             <div class="col">
                                 <a href="{{ trip.get_url }}" class="btn text-white btn-next btn-bottom"><i
-                                        class="fas fa-plus"></i> More Info
+                                        class="fas fa-plus" aria-hidden="true"></i> More Info
                                 </a>
                             </div>
                         </div>
