Added required attribute to the input field and removed unused classes

--- a/accounts/templates/accounts/forgot_password.html
+++ b/accounts/templates/accounts/forgot_password.html
@@ -6,19 +6,19 @@
 {% block content %}
 <section class="main-content">
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-auto mt-5">
+        <div class="row">
+            <div class="col text-center">
                 <h2>Forgot Password</h2>
             </div>
         </div>
-        
+        <!--Forgot password form-->
         <div class="row justify-content-md-center mt-4 spacing">
             <div class="col-lg-6 col-md-8 col-sm-12">
                 <form class="row g-3 login-form" action="{% url 'forgot_password' %}" method="POST">
                   {% csrf_token %}
                   <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email address:</label>
-                    <input type="email" autofocus class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
+                    <label for="user_email" class="form-label">Please enter your email address:</label>
+                    <input type="email" autofocus class="form-control" id="user_email" name="email" required>
                   </div>
                   <div class="mb-3">
                     <button type="submit" class="btn btn-next w-100">Submit</button>
@@ -26,9 +26,11 @@
                 </form>
             </div>
         </div>
-        <div class="row justify-content-md-center">
-          <div class="col-lg-4 col-md-8 mt-5">
-            <p class="d-md-inline">Do not have an account ?</p><a class="btn btn-dropdown d-md-inline" href="{% url 'register' %}">Register</a>
+        <!--Link to Registration page-->
+        <div class="row">
+          <div class="col mt-5 text-center">
+            <p class="d-inline">Do not have an account ?</p>
+            <a class="btn btn-dropdown d-inline" href="{% url 'register' %}">Register</a>
           </div>
         </div>
     </div>
