Added color to trip-link class on hover

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -695,9 +695,11 @@ a.ui-button:active, .ui-button:active,
     color: #2576da;
 }
 
-.reset-password a {
-    color:#2576da;
-}
+
+
+.trip-link strong:hover {
+    color: #fafafa;
+  }
 
 /**************Update Personal Info*/
 /* 
